# my-whoop-mcp

./: .env.example  .gitignore  PRIVACY.md  README.md  pyproject.toml
src/whoop_mcp/: __init__.py  auth.py  client.py  login.py  server.py
